#                                               -*- Autoconf -*-
# Process this file with autoconf to produce a configure script.

AC_INIT([vkcli], [1.0])
AM_INIT_AUTOMAKE([-Wall -Werror subdir-objects foreign])

# Checks for programs.
AC_PROG_CC
AC_PROG_INSTALL
AC_PROG_MAKE_SET
AM_CFLAGS
# Checks for libraries.

# Set shared libraries

# Checks for header files.
# Checks for typedefs, structures, and compiler characteristics.

# Checks for library functions.


AC_CONFIG_FILES([Makefile])
AC_OUTPUT
